# pfruleslawyer

./: .gitignore  CLAUDE.md  README.md  chunking_prompt.py  convert_to_markdown.py  db.py  filter_urls.py  filtered_urls.txt  important_urls.txt  package.json  preprocess_all.sh  preprocess_config.json  preprocess_from_db.py  preprocess_sections.py  pyproject.toml  remove_links.py  rules_lawyer.py  section_extractor.py  url_to_markdown.py  vector_store.py
cli/: CLAUDE.md  __init__.py  ask.py  db.py  preprocess.py  server.py  vectordb.py
config/: CLAUDE.md  class_secondary_urls.json  markdown_modifications.yaml  preprocess_config.json  preprocess_config.yaml
data/: CLAUDE.md
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
manifests/: ability-scores.json  afflictions.json  armor.json  basics-ability-scores_ability-scores.json  basics-ability-scores_glossary.json  bestiary_rules-for-monsters_creature-types.json  bestiary_rules-for-monsters_universal-monster-rules.json  classes_alternate-classes_antipaladin_archetypes_paizo-antipaladin-archetypes_blighted-myrmidon-antipaladin-archetype.json  classes_alternate-classes_antipaladin_archetypes_paizo-antipaladin-archetypes_dread-vanguard-antipaladin-archetype.json  classes_alternate-classes_antipaladin_archetypes_paizo-antipaladin-archetypes_insinuator-antipaladin-archetype.json  classes_alternate-classes_antipaladin_archetypes_paizo-antipaladin-archetypes_knight-of-the-sepulcher.json  classes_alternate-classes_ninja_archetypes_paizo-ninja-archetypes_hunting-serpent-ninja-archetype.json  (+5330 more)
(+4673 files in other folders)
